--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^12.23.26",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-error-boundary": "^6.0.1",
     "react-fast-marquee": "^1.6.5",
     "react-router-dom": "^7.11.0",
     "tw-elements": "^2.0.0"
