--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.2.0",
     "react-error-boundary": "^6.0.1",
     "react-fast-marquee": "^1.6.5",
+    "react-hook-form": "^7.70.0",
     "react-router-dom": "^7.11.0",
     "tw-elements": "^2.0.0"
   },
