--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
+    "chartjs-plugin-annotation": "^3.1.0",
     "framer-motion": "^12.23.26",
     "react": "^19.2.0",
+    "react-chartjs-2": "^5.3.1",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.2.0",
     "react-error-boundary": "^6.0.1",
     "react-fast-marquee": "^1.6.5",
@@ -23,6 +27,7 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@iconify/react": "^6.0.2",
+    "@types/highcharts": "^5.0.44",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
