connect frontend with backend

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,22 @@
 {
   "files": [],
   "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
+    {
+      "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./tsconfig.node.json"
+    }
   ],
   "compilerOptions": {
     "resolveJsonModule": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "types": [
+      "node",
+      "react"
+    ],
+    "typeRoots": [
+      "node_modul"
+    ]
   }
 }
