--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chartjs-plugin-annotation": "^3.1.0",
     "chartjs-plugin-datalabels": "^2.2.0",
     "framer-motion": "^12.23.26",
+    "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.1",
     "lottie-web": "^5.13.0",
     "react": "^19.2.3",
@@ -32,7 +33,7 @@
     "@eslint/js": "^9.39.1",
     "@iconify/react": "^6.0.2",
     "@types/highcharts": "^5.0.44",
-    "@types/node": "^24.10.1",
+    "@types/node": "^24.10.9",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
