--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.70.0",
     "react-router-dom": "^7.11.0",
+    "react-tooltip": "^5.30.0",
     "tw-elements": "^2.0.0"
   },
   "devDependencies": {
