--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "@lottiefiles/dotlottie-react": "^0.17.13",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
