--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^4.5.1",
     "chartjs-plugin-annotation": "^3.1.0",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.26",
     "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.1",
